--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="margin-top: -63px;">
 
 <head>
     <meta charset="utf-8">
@@ -30,7 +30,7 @@
     <!-- Start: Article List -->
     <div class="article-list" style="background-color: rgb(175,222,245);">
         <div class="container" style="margin-top: 59px;">
-            <h2 class="text-center" style="background-color: #d4f0fc;padding-top: 9px;padding-right: 0px;padding-bottom: 12px;font-size: 23px;opacity: 1;font-family: Alike, serif;color: rgb(0,0,0);margin-top: 0px;">Bienvenidos explora todas las secciones que tenemos para tí</h2>
+            <h2 class="text-center" style="background-color: #d4f0fc;padding-top: 9px;padding-right: 0px;padding-bottom: 12px;font-size: 23px;opacity: 1;font-family: Alike, serif;color: rgb(0,0,0);margin: 6px;margin-top: 0px;">Bienvenidos explora todas las secciones que tenemos para tí</h2>
             <!-- Start: Intro -->
             <div class="intro">
                 <p class="text-center" style="font-size: 26px;padding-bottom: 44px;color: rgb(0,0,0);">Esperemos que cada sección les sea de bendición&nbsp;</p>
