--- a/index.html
+++ b/index.html
@@ -79,14 +79,14 @@
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 item">
-                    <div class="box"><img class="rounded-circle" src="/assets/img/WhatsApp%20Image%202021-02-25%20at%209.17.46%20PM.jpeg?h=2d2fd9de4952f2446d07c4c7d1532e87">
+                    <div class="box"><img class="rounded-circle" src="./assets/img/dinora.jpeg">
                         <h3 class="name">Dinora Cook</h3>
                         <p class="title">Servidora</p>
                         <p class="description"><br>Salmos 134<br><br>Mirad, bendecid a Jehová,<br>&nbsp;&nbsp;&nbsp;&nbsp;Vosotros todos los siervos de Jehová,<br>&nbsp;&nbsp;&nbsp;&nbsp;Los que en la casa de Jehová estáis por las noches.<strong>2&nbsp;</strong>Alzad vuestras
                             manos al santuario,<br>Y bendecid a Jehová.<strong>3&nbsp;</strong>Desde Sion te bendiga Jehová,<br>El cual ha hecho los cielos y la tierra.<br><br></p>
                         <div class="social" style="margin-bottom: 54px;"><a href="#"></a><a href="#"></a><a href="#"></a></div>
                     </div>
-                    <div class="box"><img class="rounded-circle" src="/assets/img/WhatsApp%20Image%202021-01-31%20at%209.02.34%20PM.jpeg?h=37832642393feabe1348d8e3c0b1b372">
+                    <div class="box"><img class="rounded-circle" src="./assets/img/mauricio.jpeg">
                         <h3 class="name">Mauriel Azofeifa</h3>
                         <p class="title">Servidor y creador de contenido</p>
                         <p class="description"><br>Ninguno tenga en poco tu juventud, sino sé ejemplo de los creyentes en palabra, conducta, amor, espíritu, fe y pureza.<br>&nbsp;1 Timoteo 4:12</p>
