--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             manos al santuario,<br>Y bendecid a Jehová.<strong>3&nbsp;</strong>Desde Sion te bendiga Jehová,<br>El cual ha hecho los cielos y la tierra.<br><br></p>
                         <div class="social" style="margin-bottom: 54px;"><a href="#"></a><a href="#"></a><a href="#"></a></div>
                     </div>
-                    <div class="box"><img class="rounded-circle" src="./assets/img/mauricio.jpeg">
+                    <div class="box"><img class="rounded-circle" src="./assets/img/WhatsApp Image 2021-01-31 at 9.02.34 PM.jpeg">
                         <h3 class="name">Mauriel Azofeifa</h3>
                         <p class="title">Servidor y creador de contenido</p>
                         <p class="description"><br>Ninguno tenga en poco tu juventud, sino sé ejemplo de los creyentes en palabra, conducta, amor, espíritu, fe y pureza.<br>&nbsp;1 Timoteo 4:12</p>
@@ -103,7 +103,7 @@
                         <div
                             class="social d-flex justify-content-center" style="padding-bottom: 55px;"><a class="d-flex justify-content-center" href="https://www.facebook.com/profile.php?id=100059018710203"><i class="fa fa-facebook-official d-flex justify-content-center" style="margin-left: 41px;"></i></a><a href="#"></a><a href="#"></a></div>
                 </div>
-                <div class="box"><img class="rounded-circle" src="/assets/img/WhatsApp%20Image%202021-02-25%20at%209.16.16%20PM.jpeg?h=203f3d124bddb6d9a77f2b1d97deeb68">
+                <div class="box"><img class="rounded-circle" src="./assets/img/mauricio.jpeg">
                     <h3 class="name">Mauricio Azofeifa</h3>
                     <p class="title">Servidor&nbsp;</p>
                     <p class="description"><br><br>Proverbios 3:5-6<br><br>Fíate de Jehová de todo tu corazón, Y no te apoyes en tu propia prudencia.Reconócelo en todos tus caminos, Y él enderezará tus veredas.<br><br><br></p>
